Refactors the documentation.

--- a/doc/pages/output/css/style.css
+++ b/doc/pages/output/css/style.css
@@ -8,8 +8,10 @@ body {
 #header {
 	margin: 25px 10px 0px 10px;
 	text-align: right;
+	color: white;
 }
 #header a, #header a:visited {
+	padding-left: 10px;
 	color: white;
 }
 #header a:hover {
@@ -17,14 +19,19 @@ body {
 }
 #main {
 	margin: 5px 10px;
-	padding: 8px 30px 8px 15px;
 	background-color: white;
+	padding-top: 25px;
 }
 #main h1 {
 	font-size: 1.8em;
 	background-color: #700000;
 	color: white;
 	padding: 15px;
+	margin: 0;
+}
+#main .text {
+	padding: 8px 30px 8px 15px;
+	min-height: 800px;
 }
 #main h2 {
 	font-size: 1.9em;
