--- a/css/coderay.css
+++ b/css/coderay.css
@@ -13,19 +13,26 @@
 }
 .CodeRay .code { color: #ffdead; background: transparent; }
 .CodeRay .c { color: #b22222; font-weight: bold; background: transparent; }
+
 .CodeRay .r, 
 .CodeRay .ke,
 .CodeRay .ty,
 .CodeRay .pd,
 .CodeRay .ta,
 .CodeRay .kw { color: #00ffff; background: transparent; }
+
 .CodeRay .vl,
-.CodeRay .s { color: #7fffd4; background: transparent; }
+.CodeRay .s,
 .CodeRay .i  { color: #7fffd4; background: transparent; }
+
+.CodeRay .sy,
 .CodeRay .fu,
-.CodeRay .co,
 .CodeRay .an { color: #ffa07a; background: transparent; }
+
 .CodeRay .iv { color: #eedd82; background: transparent; }
-.CodeRay .rx  { color: #ffa07a; background: transparent; }
+
+.CodeRay .co,
 .CodeRay .pc  { color: #00ffee; background: transparent; }
+
+.CodeRay .rx,
 .CodeRay .idl    { color: #ffa07a; background: transparent; }
